# iam

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  celerybeat-schedule  check_apps.py  check_apps_raw.py  check_mfa.py  docker-compose.yml  get_bootstrap_outputs.py  grant_permissions.py  grant_sa_permissions.py  iam-3.0.postman_collection.json  package-lock.json  package.json  pyproject.toml
accounts/: admin.py  domain_block.py  managers.py  models.py  recovery.py  serializers.py  tasks.py
admin-dashboard/: .env.example  index.html  package.json  vite.config.ts
ams-app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
api/: __init__.py
audit/: admin.py  apps.py  chain.py  emit.py  forwarder.py  models.py  serializers.py  tasks.py  urls.py  views.py
clients/: admin.py  models.py  serializers.py  services.py  tasks.py  zitadel_client.py
compliance/: admin.py  models.py  urls.py  views.py
config/: celery.py  urls.py
console/: onboarding.py  onboarding_urls.py  permissions.py  selectors.py  serializers.py  services.py  urls.py
core/: apps.py  exceptions.py  health_urls.py  health_views.py  logging.py  metrics.py  middleware.py  models.py  otel.py  pagination.py  renderers.py  responses.py  risk.py  schema.py  tasks.py  vault.py  zitadel.py
delegation/: admin.py  models.py  tasks.py  urls.py  views.py
doc/: BACKLOG_ZITADEL.md
keycloak/: realm-export.json
lifecycle/: admin.py  apps.py  hrms.py  models.py  scim.py  tasks.py  urls.py  views.py
login/: api_views.py  risk.py  urls.py  views.py  zitadel_auth.py
login-app/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.mjs  test-api.mjs
monitoring/: grafana-dashboard.json
nbes-app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
oidc_rp/: actions_v2.py  apps.py  auth.py  backchannel.py  claims.py  claims_schema.py  recovery_views.py  urls.py  views.py
pam/: admin.py  apps.py  models.py  services.py  tasks.py  urls.py  views.py
rbac/: admin.py  models.py  tasks.py  (+3 more)
(+242 files in other folders)
