[project]
name = "iam-3.0"
version = "0.1.0"
description = "CLET/GSL IAM System 19 — Zitadel IdP + Django Backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.1,<6.0",
    "djangorestframework>=3.15,<4.0",
    "django-filter>=24.3",
    "mozilla-django-oidc>=4.0",
    "celery>=5.4",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
    "django-cors-headers>=4.4",
    "python-dateutil>=2.9",
    "requests>=2.32",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.8",
    "python-ipware>=3.0",
    "user-agents>=2.2",
    "phonenumbers>=8.13",
    "email-validator>=2.2",
    "drf-spectacular>=0.27",
    "gunicorn>=22.0",
    "uvicorn[standard]>=0.30",
    "hiredis>=2.4",
    "tenacity>=8.5",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-django>=0.49b",
    "opentelemetry-exporter-otlp>=1.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "factory-boy>=3.3",
    "freezegun>=1.5",
    "ruff>=0.6",
    "mypy>=1.11",
    "model-bakery>=1.19",
    "responses>=0.25",
    "django-stubs>=5.0",
    "djangorestframework-stubs>=3.15",
    "celery-stubs",
    "ipython",
    "django-extensions>=3.2",
    "watchfiles>=0.24",
    "httpx>=0.27",
    "schemathesis>=3.36",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "PTH", "TD"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
strict = true
python_version = "3.12"
ignore_missing_imports = true
explicit_plugin_bases = true
plugins = ["mypy_django_plugin.plugin"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers --tb=short"
